erDiagram

  %% Table relationships
  permissions ||--|{ users : ""
  customers ||--o{ customer_contacts : ""

  %% Table definitions

  %% 権限
  permissions {
    bigint id PK "ID"
    int level "権限レベル"
    string name "権限名"
    string display_name "表示名"
    timestamp created_at
    timestamp updated_at
  }

  %% ユーザー
  users {
    bigint id PK "ID"
    bigint permission_id FK "権限ID"
    string name "ユーザー名"
    string name_kana "読み仮名"
    string email UK "E-mail"
    timestamp email_verified_at
    string password "パスワード"
    string employee_code UK "社員番号"
    string mobile_number "携帯番号"
    date employment_date "入社日"
    date resignation_date "退職日"
    timestamp created_at
    timestamp updated_at
  }


  %% 取引先
  customers {
    bigint id PK "ID"
    string name "取引先名"
    string name_kana "ヨミガナ"
    string shortcut "ショートカット名"
    string postal_code "郵便番号"
    string address "住所"
    string tel "TEL"
    string fax "FAX"
    text note "備考"
    bigint in_charge_user_id FK "担当ユーザーID"
    bigint created_by_id FK "作成ユーザーID"
    bigint updated_by_id FK "更新ユーザーID"
    timestamp created_at "作成日時"
    timestamp updated_at "更新日時"
  }

  %% 取引先担当者
  customer_contacts {
    bigint id PK "ID"
    bigint customer_id FK "取引先ID"
    string name "顧客担当者名"
    string name_kana "読み仮名"
    string tel "TEL"
    string mobile_number "携帯"
    string email "E-mail"
    string position "役職"
    string role "役割"
    bool is_active "使用状況"
    text note "備考"
    bigint in_charge_user_id FK "担当ユーザーID"
    bigint created_by_id FK "作成ユーザーID"
    bigint updated_by_id FK "更新ユーザーID"
    timestamp created_at "作成日時"
    timestamp updated_at "更新日時"
  }
